--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -34,7 +34,7 @@ body {
 #gallery {
     display: grid;
     gap: 10px;
-    //grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
 
     .post {
         background-color: #fff;
