--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -36,6 +36,7 @@ body {
   display: -ms-grid;
   display: grid;
   gap: 10px;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
 }
 
 #gallery .post {
